--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jdh-npm-footer-renderer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A cool footer rendering engine",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/jordanhudgens/jdh-npm-footer-renderer#readme",
   "dependencies": {
     "moment": "^2.20.1"
+  },
+  "engines": {
+    "node": ">=4.2.4"
   }
 }
